fix: replace deprecated threadId with getId() in logging statements